--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </header>
       <main>
         <section id="about">
-          <h2>About Me</h2>
+          <h2 class="title">About Me</h2>
           <div class="about-content">
             <div class="about-text">
               <p>
@@ -47,7 +47,7 @@
           </div>
         </section>
         <section id="work">
-          <h2>My Work</h2>
+          <h2 class="title">My Work</h2>
           <div class="project-card">
             <h3>Rainbow Candy Theme</h3>
             <img src="screenshot.png" alt="Screenshot of Rainbow Candy Theme" />
@@ -64,7 +64,7 @@
           </div>
         </section>
         <section id="contact">
-          <h2>Contact Me</h2>
+          <h2 class="title">Contact Me</h2>
           <p>
             If you'd like to get in touch, please reach out through the provided
             contact information.
