--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joe-Manuel Schlüter | Designer & Developer</title>
+    <meta
+      name="description"
+      content="Joe-Manuel Schlüter's personal portfolio website."
+    />
+    <meta
+      name="keywords"
+      content="Joe-Manuel Schlüter, Portfolio, Tech, Design"
+    />
+    <meta name="author" content="Joe-Manuel Schlüter" />
+    <title>Joe-Manuel Schlüter | Tech Enthusiast & Designer</title>
     <link rel="shortcut icon" href="logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -49,7 +58,7 @@
         <section id="work">
           <h2 class="title">My Work</h2>
           <div class="project-card">
-            <h3>Rainbow Candy Theme</h3>
+            <h3 id="theme-title">Rainbow Candy Theme</h3>
             <img src="screenshot.png" alt="Screenshot of Rainbow Candy Theme" />
             <p>A sweet and colorful theme for GNOME and GTK desktops. 🌈🍭</p>
             <div class="project-links">
