--- a/index.html
+++ b/index.html
@@ -62,12 +62,8 @@
             <h3 id="theme-title">CandyOS</h3>
             <p>A sweet and colorful Ubuntu remix. 🌈🍭</p>
             <div class="project-links">
-              <a
-                href="https://github.com/rebitz42/candyos"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="btn"
-                >View on GitHub</a
+              <a href="#" target="_blank" rel="noopener noreferrer" class="btn"
+                >Download</a
               >
             </div>
           </div>
