Added a footer note

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
       </main>
       <hr />
       <footer>
-        <p>&copy; 2026 Joe-Manuel Schlüter</p>
+        <p>
+          &copy; 2026 Joe-Manuel Schlüter<br />
+          Ubuntu is a Trademark of Canonical Ltd.
+        </p>
       </footer>
     </div>
   </body>
