--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img src="logo.jpg" alt="Joe-Manuel Schlüter Logo" />
           <h1>Joe-Manuel Schlüter</h1>
           <p>
-            Just a guy with a weird brain, breaking PCs & working on an Ubuntu
+            Just a guy with a weird brain, breaking PCs and working on an Ubuntu
             remix. 🖤🐧
           </p>
         </nav>
