--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h2 class="title">My Work</h2>
           <div class="project-card">
             <img src="screenshot.png" alt="Screenshot of CandyOS" />
-            <h3 id="theme-title">CandyOS</h3>
+            <h3 id="project-title">CandyOS</h3>
             <p>A sweet and colorful Ubuntu remix. 🌈🍭</p>
             <div class="project-links">
               <a href="#" target="_blank" rel="noopener noreferrer" class="btn"
